<resources>
    <string name="app_name">Health app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track">Track</string>
    <string name="your">Your</string>
    <string name="health">Health</string>
    <string name="profile">Profile</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="getting_started">Welcome to Health app</string>
    <string name="description">On Health app you can calculate your BMI which from you can know if you are Underweight, normal weight, overweight,or obesity</string>
    <string name="lifestyle">Take a decision and follow a good lifestyle for you and build a good profile</string>
    <string name="name">Name</string>
    <string name="welcome_message">Welcome to Health app, Please Enter these details</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="weight">Enter your weight in KG</string>
    <string name="height">Enter your height in cm</string>
</resources>